fix: globalize styles and fix failures on small screens

--- a/apps/adrian-badilla/src/styles.scss
+++ b/apps/adrian-badilla/src/styles.scss
@@ -18,4 +18,12 @@ body {
   --clr-accent-400: hsl(142 90% 61%);
   --clr-neutral-100: hsl(0, 0%, 100%);
   --clr-neutral-900: hsl(0, 0%, 0%);
+
+  // Fuentes
+  --font-primary: 'Plus Jakarta Sans', sans-serif;
+  --font-secondary: 'Inter', sans-serif;
+
+  //pesos de fuente
+  --fw-medium: 500;
+  --fw-bold: 800;
 }
